live_deploy/dashboard/nohup.out
Colonnes des données des vols: Index(['AirportCode', 'DepartureAirportCode', 'ScheduledDepartureLocal',
       'ScheduledDepartureUTC', 'ActualDepartureLocal', 'ActualDepartureUTC',
       'DepartureTimeStatus', 'ArrivalAirportCode', 'ScheduledArrivalLocal',
       'ScheduledArrivalUTC', 'ActualArrivalLocal', 'ActualArrivalUTC',
       'ArrivalTimeStatus', 'MarketingAirlineID', 'MarketingFlightNumber',
       'OperatingAirlineID', 'OperatingFlightNumber', 'AircraftCode',
       'AircraftRegistration', 'FlightStatus', 'ServiceType',
       'DepartureLatitude', 'DepartureLongitude', 'ArrivalLatitude',
       'ArrivalLongitude'],
      dtype='object')
Dash is running on http://127.0.0.1:8050/

 * Serving Flask app 'app'
 * Debug mode: on
Colonnes des données des vols: Index(['AirportCode', 'DepartureAirportCode', 'ScheduledDepartureLocal',
       'ScheduledDepartureUTC', 'ActualDepartureLocal', 'ActualDepartureUTC',
       'DepartureTimeStatus', 'ArrivalAirportCode', 'ScheduledArrivalLocal',
       'ScheduledArrivalUTC', 'ActualArrivalLocal', 'ActualArrivalUTC',
       'ArrivalTimeStatus', 'MarketingAirlineID', 'MarketingFlightNumber',
       'OperatingAirlineID', 'OperatingFlightNumber', 'AircraftCode',
       'AircraftRegistration', 'FlightStatus', 'ServiceType',
       'DepartureLatitude', 'DepartureLongitude', 'ArrivalLatitude',
       'ArrivalLongitude'],
      dtype='object')
  File "/home/medo/1datascientest/mai24_bde_airlines/dashboard/app.py", line 15
    dcc.Tab(label='Flight Delay Estimator', value='tab-5')])
                                                          ^
SyntaxError: unmatched ']'
Dash is running on http://127.0.0.1:8050/

 * Serving Flask app 'app'
 * Debug mode: on
Traceback (most recent call last):
  File "/home/medo/1datascientest/mai24_bde_airlines/live_deploy/dashboard/app.py", line 4, in <module>
    from callbacks import register_callbacks
  File "/home/medo/1datascientest/mai24_bde_airlines/live_deploy/dashboard/callbacks.py", line 9, in <module>
    from sklearn.metrics import confusion_matrix
ModuleNotFoundError: No module named 'sklearn'
Traceback (most recent call last):
  File "/home/medo/1datascientest/mai24_bde_airlines/live_deploy/dashboard/app.py", line 1, in <module>
    import dash
ModuleNotFoundError: No module named 'dash'
Traceback (most recent call last):
  File "/home/medo/1datascientest/mai24_bde_airlines/live_deploy/dashboard/app.py", line 1, in <module>
    import dash
ModuleNotFoundError: No module named 'dash'
Dash is running on http://127.0.0.1:8050/

 * Serving Flask app 'app'
 * Debug mode: on
Dash is running on http://127.0.0.1:8050/

 * Serving Flask app 'app'
 * Debug mode: on
Traceback (most recent call last):
  File "/home/medo/1datascientest/mai24_bde_airlines/live_deploy/dashboard/app.py", line 1, in <module>
    import dash
ModuleNotFoundError: No module named 'dash'
Dash is running on http://127.0.0.1:8050/

 * Serving Flask app 'app'
 * Debug mode: on
Dash is running on http://127.0.0.1:8050/

 * Serving Flask app 'app'
 * Debug mode: on
